ajuste textos y template estructura menu principal

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -18,10 +18,10 @@
                   <div class="text-center mt-sm-5 mb-4 text-white-50">
                       <div>
                           <a href="" class="d-inline-block auth-logo">
-                              <img src="assets/images/logo-light.png" alt="" height="20">
+                              <img src="assets/images/logo-light2.png" alt="" height="20">
                           </a>
                       </div>
-                      <p class="mt-3 fs-15 fw-medium">Premium Admin & Dashboard Template</p>
+                      <p class="mt-3 fs-15 fw-medium">Cumplimiento legal de tu empresa a un click</p>
                   </div>
               </div>
           </div>
@@ -33,52 +33,52 @@
 
                       <div class="card-body p-4">
                           <div class="text-center mt-2">
-                              <h5 class="text-primary">Welcome Back !</h5>
-                              <p class="text-muted">Sign in to continue to Velzon.</p>
+                              <h5 class="text-primary">Bienvenido!</h5>
+                              <p class="text-muted">Ingrese su correo y contraseña.</p>
                           </div>
                           <div class="p-2 mt-4">
                               <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
                                   <div class="mb-3">
-                                    <label class="form-label" for="username">Email</label>
+                                    <label class="form-label" for="username">Correo Electrónico</label>
                                     <input type="email" class="form-control" id="email" formControlName="email"
                                     [ngClass]="{ 'is-invalid': submitted && f['email'].errors }"
-                                    placeholder="Enter email">
+                                    placeholder="Ingresar correo electronico">
                                     <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
-                                        <div *ngIf="f['email'].errors['required']">Email is required</div>
-                                        <div *ngIf="f['email'].errors['email']">Email must be a valid email address
+                                        <div *ngIf="f['email'].errors['required']">Correo es requerido</div>
+                                        <div *ngIf="f['email'].errors['email']">Correo electronico debe ser una cuenta valida
                                         </div>
                                     </div>
                                   </div>
 
                                   <div class="mb-3">
                                       <div class="float-end">
-                                          <a routerLink="/pass-reset/basic" class="text-muted">Forgot password?</a>
+                                          <a routerLink="/pass-reset/basic" class="text-muted">Olvido su contraseña?</a>
                                       </div>
-                                      <label class="form-label" for="password-input">Password</label>
+                                      <label class="form-label" for="password-input">Contraseña</label>
                                       <div class="position-relative auth-pass-inputgroup mb-3">
-                                          <input [type]="fieldTextType ? 'text' : 'password'" class="form-control pe-5" placeholder="Enter password" id="password-input" formControlName="password"
+                                          <input [type]="fieldTextType ? 'text' : 'password'" class="form-control pe-5" placeholder="Ingresar contraseña" id="password-input" formControlName="password"
                                           [ngClass]="{ 'is-invalid': submitted && f['password'].errors }">
                                           <button class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted" type="button" id="password-addon"><i class="mdi align-middle" [ngClass]="{'mdi-eye-off-outline': !fieldTextType, 'mdi-eye-outline': fieldTextType
                                           }" (click)="toggleFieldTextType()"></i></button>
                                           <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
-                                            <span *ngIf="f['password'].errors['required']">Password is required</span>
+                                            <span *ngIf="f['password'].errors['required']">Contraseña es requerida</span>
                                           </div>
                                       </div>
                                   </div>
 
                                   <div class="form-check">
                                       <input class="form-check-input" type="checkbox" value="" id="auth-remember-check">
-                                      <label class="form-check-label" for="auth-remember-check">Remember me</label>
+                                      <label class="form-check-label" for="auth-remember-check">Recordar contraseña</label>
                                   </div>
 
                                   <div class="mt-4">
-                                      <button class="btn btn-success w-100" type="submit">Sign In</button>
+                                      <button class="btn btn-success w-100" type="submit">Iniciar sesión</button>
                                   </div>
 
                                   <div class="mt-4 text-center">
                                       <div class="signin-other-title">
-                                          <h5 class="fs-13 mb-4 title">Sign In with</h5>
+                                          <h5 class="fs-13 mb-4 title">Iniciar sesión con</h5>
                                       </div>
                                       <div class="d-flex gap-2 justify-content-center">
                                           <button type="button" class="btn btn-primary btn-icon waves-effect waves-light"><i class="ri-facebook-fill fs-16"></i></button>
@@ -95,7 +95,7 @@
                   <!-- end card -->
 
                   <div class="mt-4 text-center">
-                      <p class="mb-0">Don't have an account ? <a routerLink="/auth/register" class="fw-semibold text-primary text-decoration-underline"> Signup </a> </p>
+                      <p class="mb-0">¿No tienes una cuenta? <a routerLink="/auth/register" class="fw-semibold text-primary text-decoration-underline"> Solicita una prueba gratuita o inscripción </a> </p>
                   </div>
 
               </div>
@@ -112,7 +112,7 @@
           <div class="row">
               <div class="col-lg-12">
                   <div class="text-center">
-                      <p class="mb-0 text-muted">&copy; {{year}} Velzon. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                      <p class="mb-0 text-muted">&copy; {{year}} Conect - IA. Crafted with <i class="mdi mdi-heart text-danger"></i> by Tresidea spa</p>
                   </div>
               </div>
           </div>
