--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -18,7 +18,7 @@
                             <img src="assets/images/logo-sm.png" alt="" height="22">
                         </span>
                         <span class="logo-lg">
-                            <img src="assets/images/logo-light.png" alt="" height="17">
+                            <img src="assets/images/logo-light2.png" alt="" height="17">
                         </span>
                     </a>
                 </div>
@@ -35,7 +35,7 @@
                 <!-- App Search-->
                 <form class="app-search d-none d-md-block">
                     <div class="position-relative">
-                        <input type="text" class="form-control" placeholder="Search..." autocomplete="off"
+                        <input type="text" class="form-control" placeholder="Buscar..." autocomplete="off"
                             id="search-options" value="" (keyup)="Search()">
                         <span class="mdi mdi-magnify search-widget-icon"></span>
                         <span class="mdi mdi-close-circle search-widget-icon search-widget-icon-close d-none"
@@ -144,7 +144,7 @@
                     </div>
                 </div>
 
-                <div class="dropdown ms-1 topbar-head-dropdown header-item" ngbDropdown>
+                <!--<div class="dropdown ms-1 topbar-head-dropdown header-item" ngbDropdown>
                     <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
                         data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ngbDropdownToggle>
                         <img *ngIf="flagvalue !== undefined" src="{{flagvalue}}" alt="Header Language" height="20"
@@ -154,7 +154,6 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
 
-                        <!-- item-->
                         <a href="javascript:void(0);" class="dropdown-item notify-item language py-2" data-lang="eng"
                             *ngFor="let item of listLang" (click)="setLanguage(item.text, item.lang, item.flag)"
                             [ngClass]="{'active': cookieValue === item.lang}">
@@ -309,7 +308,7 @@
                         data-toggle="fullscreen" (click)="fullscreen()">
                         <i class='bx bx-fullscreen fs-22'></i>
                     </button>
-                </div>
+                </div>-->
 
                 <div class="ms-1 header-item d-none d-sm-flex">
                     <button type="button"
