ajustes de perfil

--- a/src/app/pages/extrapages/profile/settings/settings.component.html
+++ b/src/app/pages/extrapages/profile/settings/settings.component.html
@@ -6,7 +6,7 @@
                 <div class="p-0 ms-auto rounded-circle profile-photo-edit">
                     <input id="profile-foreground-img-file-input" type="file" class="profile-foreground-img-file-input">
                     <label for="profile-foreground-img-file-input" class="profile-photo-edit btn btn-light">
-                        <i class="ri-image-edit-line align-bottom me-1"></i> Change Cover
+                        <i class="ri-image-edit-line align-bottom me-1"></i> Cambiar
                     </label>
                 </div>
             </div>
@@ -40,11 +40,11 @@
             <div class="card-body">
                 <div class="d-flex align-items-center mb-5">
                     <div class="flex-grow-1">
-                        <h5 class="card-title mb-0">Complete Your Profile</h5>
+                        <h5 class="card-title mb-0">Completa tu Perfil</h5>
                     </div>
                     <div class="flex-shrink-0">
                         <a href="javascript:void(0);" class="badge bg-light text-primary fs-12"><i
-                                class="ri-edit-box-line align-bottom me-1"></i> Edit</a>
+                                class="ri-edit-box-line align-bottom me-1"></i> Editar</a>
                     </div>
                 </div>
                 <div class="progress animated-progess custom-progress progress-label">
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </div>
-        <div class="card">
+        <!--<div class="card">
             <div class="card-body">
                 <div class="d-flex align-items-center mb-4">
                     <div class="flex-grow-1">
@@ -101,7 +101,7 @@
                         value="Advance Dave">
                 </div>
             </div>
-        </div><!--end card-->
+        </div>-->
     </div><!--end col-->
     <div class="col-xxl-9">
         <div class="card mt-xxl-n5">
@@ -111,92 +111,92 @@
                     <li [ngbNavItem]="1" class="nav-item">
                         <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="fas fa-home"></i>
-                            Personal Details
+                            Detalles Personales
                         </a>
                         <ng-template ngbNavContent>
                             <form action="javascript:void(0);">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="mb-3">
-                                            <label for="firstnameInput" class="form-label">First Name</label>
+                                            <label for="firstnameInput" class="form-label">Nombre</label>
                                             <input type="text" class="form-control" id="firstnameInput"
-                                                placeholder="Enter your firstname" value="Dave">
+                                                placeholder="Ingresa tu nombre" value="Dave">
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-6">
                                         <div class="mb-3">
-                                            <label for="lastnameInput" class="form-label">Last Name</label>
+                                            <label for="lastnameInput" class="form-label">Apellido</label>
                                             <input type="text" class="form-control" id="lastnameInput"
-                                                placeholder="Enter your lastname" value="Adame">
+                                                placeholder="Ingresa tu apellido" value="Adame">
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-6">
                                         <div class="mb-3">
-                                            <label for="phonenumberInput" class="form-label">Phone Number</label>
+                                            <label for="phonenumberInput" class="form-label">Telefóno</label>
                                             <input type="text" class="form-control" id="phonenumberInput"
-                                                placeholder="Enter your phone number" value="+(1) 987 6543">
+                                                placeholder="Ingresa tu telefóno" value="+(1) 987 6543">
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-6">
                                         <div class="mb-3">
-                                            <label for="emailInput" class="form-label">Email Address</label>
+                                            <label for="emailInput" class="form-label">Correo Electrónico</label>
                                             <input type="email" class="form-control" id="emailInput"
-                                                placeholder="Enter your email" value="daveadame@velzon.com">
+                                                placeholder="Ingresa tu correo Electrónico" value="daveadame@velzon.com">
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-12">
                                         <div class="mb-3">
-                                            <label for="JoiningdatInput" class="form-label">Joining Date</label>
+                                            <label for="JoiningdatInput" class="form-label">Dia de Ingreso</label>
                                             <input class="form-control flatpickr-input" type="text"
-                                                placeholder="Select date" mwlFlatpickr [altInput]="true"
+                                                placeholder="Seleccionar dia" mwlFlatpickr [altInput]="true"
                                                 [convertModelValue]="true">
                                         </div>
                                     </div><!--end col-->
-                                    <div class="col-lg-12">
+                                    <!--<div class="col-lg-12">
                                         <div class="mb-3">
                                             <label for="skillsInput" class="form-label">Skills</label>
                                             <ng-select [items]="selectValue" [multiple]="true"></ng-select>
                                         </div>
-                                    </div><!--end col-->
+                                    </div>
                                     <div class="col-lg-6">
                                         <div class="mb-3">
                                             <label for="designationInput" class="form-label">Designation</label>
                                             <input type="text" class="form-control" id="designationInput"
                                                 placeholder="Designation" value="Lead Designer / Developer">
                                         </div>
-                                    </div><!--end col-->
+                                    </div>
                                     <div class="col-lg-6">
                                         <div class="mb-3">
                                             <label for="websiteInput1" class="form-label">Website</label>
                                             <input type="text" class="form-control" id="websiteInput1"
                                                 placeholder="www.example.com" value="www.velzon.com" />
                                         </div>
-                                    </div><!--end col-->
+                                    </div>-->
                                     <div class="col-lg-4">
                                         <div class="mb-3">
-                                            <label for="cityInput" class="form-label">City</label>
+                                            <label for="cityInput" class="form-label">Ciudad</label>
                                             <input type="text" class="form-control" id="cityInput" placeholder="City"
                                                 value="California" />
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-4">
                                         <div class="mb-3">
-                                            <label for="countryInput" class="form-label">Country</label>
+                                            <label for="countryInput" class="form-label">Región</label>
                                             <input type="text" class="form-control" id="countryInput"
                                                 placeholder="Country" value="United States" />
                                         </div>
                                     </div><!--end col-->
-                                    <div class="col-lg-4">
+                                    <!--<div class="col-lg-4">
                                         <div class="mb-3">
                                             <label for="zipcodeInput" class="form-label">Zip Code</label>
                                             <input type="text" class="form-control" minlength="5" maxlength="6"
                                                 id="zipcodeInput" placeholder="Enter zipcode" value="90011">
                                         </div>
-                                    </div><!--end col-->
+                                    </div>-->
                                     <div class="col-lg-12">
                                         <div class="mb-3 pb-2">
                                             <label for="exampleFormControlTextarea"
-                                                class="form-label">Description</label>
+                                                class="form-label">Descripción</label>
                                             <textarea class="form-control" id="exampleFormControlTextarea"
                                                 placeholder="Enter your description"
                                                 rows="3">Hi I'm Anna Adame,It will be as simple as Occidental; in fact, it will be Occidental. To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is European languages are members of the same family.</textarea>
@@ -204,8 +204,8 @@
                                     </div><!--end col-->
                                     <div class="col-lg-12">
                                         <div class="hstack gap-2 justify-content-end">
-                                            <button type="submit" class="btn btn-primary">Updates</button>
-                                            <button type="button" class="btn btn-soft-success">Cancel</button>
+                                            <button type="submit" class="btn btn-primary">Modificar</button>
+                                            <button type="button" class="btn btn-soft-success">Cancelar</button>
                                         </div>
                                     </div><!--end col-->
                                 </div><!--end row-->
@@ -215,51 +215,50 @@
                     <li [ngbNavItem]="2" class="nav-item">
                         <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="far fa-user"></i>
-                            Change Password
+                            Cambiar Contraseña
                         </a>
                         <ng-template ngbNavContent>
                             <form action="javascript:void(0);">
                                 <div class="row g-2">
                                     <div class="col-lg-4">
                                         <div>
-                                            <label for="oldpasswordInput" class="form-label">Old Password*</label>
+                                            <label for="oldpasswordInput" class="form-label">Actual Contraseña*</label>
                                             <input type="password" class="form-control" id="oldpasswordInput"
-                                                placeholder="Enter current password">
+                                                placeholder="Ingrese actual contraseña">
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-4">
                                         <div>
-                                            <label for="newpasswordInput" class="form-label">New Password*</label>
+                                            <label for="newpasswordInput" class="form-label">Nueva Contraseña*</label>
                                             <input type="password" class="form-control" id="newpasswordInput"
-                                                placeholder="Enter new password">
+                                                placeholder="Ingrese nueva contraseña">
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-4">
                                         <div>
-                                            <label for="confirmpasswordInput" class="form-label">Confirm
-                                                Password*</label>
+                                            <label for="confirmpasswordInput" class="form-label">Confirmar Contraseña*</label>
                                             <input type="password" class="form-control" id="confirmpasswordInput"
-                                                placeholder="Confirm password">
+                                                placeholder="Confirmar contraseña">
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-12">
                                         <div class="mb-3">
                                             <a href="javascript:void(0);"
-                                                class="link-primary text-decoration-underline">Forgot Password ?</a>
+                                                class="link-primary text-decoration-underline">Olvido su contraseña?</a>
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-12">
                                         <div class="text-end">
-                                            <button type="submit" class="btn btn-success">Change Password</button>
+                                            <button type="submit" class="btn btn-success">Cambiar Contraseña</button>
                                         </div>
                                     </div><!--end col-->
                                 </div><!--end row-->
                             </form>
                             <div class="mt-4 mb-3 border-bottom pb-2">
                                 <div class="float-end">
-                                    <a href="javascript:void(0);" class="link-primary">All Logout</a>
+                                    <a href="javascript:void(0);" class="link-primary">Todas las sesiones</a>
                                 </div>
-                                <h5 class="card-title">Login History</h5>
+                                <h5 class="card-title">Historial de Sesión</h5>
                             </div>
                             <div class="d-flex align-items-center mb-3">
                                 <div class="flex-shrink-0 avatar-sm">
@@ -320,10 +319,10 @@
                         </ng-template>
                     </li>
                     <li [ngbNavItem]="3" class="nav-item">
-                        <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
+                        <!--<a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="far fa-envelope"></i>
                             Experience
-                        </a>
+                        </a>-->
                         <ng-template ngbNavContent>
                             <form>
                                 <div id="newlink">
@@ -449,10 +448,10 @@
                         </ng-template>
                     </li>
                     <li [ngbNavItem]="4" class="nav-item">
-                        <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
+                        <!--<a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="far fa-envelope"></i>
                             Privacy Policy
-                        </a>
+                        </a>-->
                         <ng-template ngbNavContent>
                             <div class="mb-4 pb-2">
                                 <h5 class="card-title text-decoration-underline mb-3">Security:</h5>
