--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -670,33 +670,33 @@
                     </button>
                     <div class="dropdown-menu dropdown-menu-end" ngbDropdownMenu>
                         <!-- item-->
-                        <h6 class="dropdown-header">Welcome Anna!</h6>
+                        <h6 class="dropdown-header">Bienvenid@ {{userData.first_name}}!</h6>
                         <a class="dropdown-item" routerLink="/pages/profile"><i
                                 class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle">Profile</span></a>
+                                class="align-middle">Perfil</span></a>
                         <a class="dropdown-item" routerLink="/apps/chat"><i
                                 class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle">Messages</span></a>
+                                class="align-middle">Mensajes</span></a>
                         <a class="dropdown-item" routerLink="/tasks/kanban"><i
                                 class="mdi mdi-calendar-check-outline text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle">Taskboard</span></a>
+                                class="align-middle">Tareas</span></a>
                         <a class="dropdown-item" routerLink="/pages/faqs"><i
                                 class="mdi mdi-lifebuoy text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle">Help</span></a>
+                                class="align-middle">Ayuda</span></a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" routerLink="/pages/profile"><i
+                        <!--<a class="dropdown-item" routerLink="/pages/profile"><i
                                 class="mdi mdi-wallet text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle">Balance : <b>$5971.67</b></span></a>
+                                class="align-middle">Balance : <b>$5971.67</b></span></a>-->
                         <a class="dropdown-item" routerLink="/pages/profile"><span
-                                class="badge bg-soft-success text-success mt-1 float-end">New</span><i
+                                class="badge bg-soft-success text-success mt-1 float-end">Nuevo</span><i
                                 class="mdi mdi-cog-outline text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle">Settings</span></a>
-                        <a class="dropdown-item" routerLink="/auth/lockscreen/basic"><i
+                                class="align-middle">Configuración</span></a>
+                                <!--<a class="dropdown-item" routerLink="/auth/lockscreen/basic"><i
                                 class="mdi mdi-lock text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle">Lock screen</span></a>
+                                class="align-middle">Lock screen</span></a>-->
                         <a class="dropdown-item" href="javascript: void(0);" (click)="logout()"><i
                                 class="mdi mdi-logout text-muted fs-16 align-middle me-1"></i> <span
-                                class="align-middle" data-key="t-logout">Logout</span></a>
+                                class="align-middle" data-key="t-logout">Salir</span></a>
                     </div>
                 </div>
             </div>
