--- a/src/app/pages/extrapages/profile/profile/profile.component.html
+++ b/src/app/pages/extrapages/profile/profile/profile.component.html
@@ -24,18 +24,18 @@
         </div><!--end col-->
         <div class="col-12 col-lg-auto order-last order-lg-0">
             <div class="row text text-white-50 text-center">
-                <div class="col-lg-6 col-4">
+                <!--<div class="col-lg-6 col-4">
                     <div class="p-2">
                         <h4 class="text-white mb-1">24.3K</h4>
                         <p class="fs-14 mb-0">Followers</p>
                     </div>
-                </div>
-                <div class="col-lg-6 col-4">
+                </div>-->
+                <!--<div class="col-lg-6 col-4">
                     <div class="p-2">
                         <h4 class="text-white mb-1">1.3K</h4>
                         <p class="fs-14 mb-0">Following</p>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div><!--end col-->
 
@@ -52,14 +52,14 @@
                     <li [ngbNavItem]="1" class="nav-item">
                         <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="ri-airplay-fill d-inline-block d-md-none"></i> <span
-                                class="d-none d-md-inline-block">Overview</span>
+                                class="d-none d-md-inline-block">General</span>
                         </a>
                         <ng-template ngbNavContent>
                             <div class="row">
                                 <div class="col-xxl-3">
                                     <div class="card">
                                         <div class="card-body">
-                                            <h5 class="card-title mb-5">Complete Your Profile</h5>
+                                            <h5 class="card-title mb-5">Completa tu Perfil</h5>
                                             <div class="progress animated-progess custom-progress progress-label">
                                                 <div class="progress-bar bg-danger" role="progressbar"
                                                     style="width: 30%" aria-valuenow="30" aria-valuemin="0"
@@ -77,25 +77,25 @@
                                                 <table class="table table-borderless mb-0">
                                                     <tbody>
                                                         <tr>
-                                                            <th class="ps-0" scope="row">Full Name :</th>
+                                                            <th class="ps-0" scope="row">Nombre :</th>
                                                             <td class="text-muted">{{userData.first_name}}
                                                                 {{userData.last_name}}</td>
                                                         </tr>
                                                         <tr>
-                                                            <th class="ps-0" scope="row">Mobile :</th>
+                                                            <th class="ps-0" scope="row">Teléfono :</th>
                                                             <td class="text-muted">{{userData.phone}}</td>
                                                         </tr>
                                                         <tr>
-                                                            <th class="ps-0" scope="row">E-mail :</th>
+                                                            <th class="ps-0" scope="row">Correo Electrónico :</th>
                                                             <td class="text-muted">{{userData.email}}</td>
                                                         </tr>
                                                         <tr>
-                                                            <th class="ps-0" scope="row">Location :</th>
+                                                            <th class="ps-0" scope="row">Dirección :</th>
                                                             <td class="text-muted">{{userData.city}},
                                                                 {{userData.country}}</td>
                                                         </tr>
                                                         <tr>
-                                                            <th class="ps-0" scope="row">Joining Date</th>
+                                                            <th class="ps-0" scope="row">Dia de Ingreso</th>
                                                             <td class="text-muted">{{userData.joining_date}}</td>
                                                         </tr>
                                                     </tbody>
@@ -104,7 +104,7 @@
                                         </div><!-- end card body -->
                                     </div><!-- end card -->
 
-                                    <div class="card">
+                                    <!--<div class="card">
                                         <div class="card-body">
                                             <h5 class="card-title mb-4">Portfolio</h5>
                                             <div class="d-flex flex-wrap gap-2">
@@ -138,8 +138,8 @@
                                                     </a>
                                                 </div>
                                             </div>
-                                        </div><!-- end card body -->
-                                    </div><!-- end card -->
+                                        </div>
+                                    </div>
 
                                     <div class="card">
                                         <div class="card-body">
@@ -148,8 +148,8 @@
                                                 <a href="javascript:void(0);" class="badge badge-soft-primary"
                                                     *ngFor="let skill of userData.skills">{{skill}}</a>
                                             </div>
-                                        </div><!-- end card body -->
-                                    </div><!-- end card -->
+                                        </div>
+                                    </div>
 
                                     <div class="card">
                                         <div class="card-body">
@@ -227,8 +227,8 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div><!-- end card body -->
-                                    </div><!--end card-->
+                                        </div>
+                                    </div>
 
                                     <div class="card">
                                         <div class="card-body">
@@ -295,11 +295,11 @@
                                                     <p class="text-muted mb-0">21 Nov 2021</p>
                                                 </div>
                                             </div>
-                                        </div><!--end card-body-->
-                                    </div><!--end card-->
+                                        </div>
+                                    </div>-->
                                 </div><!--end col-->
                                 <div class="col-xxl-9">
-                                    <div class="card">
+                                    <!--<div class="card">
                                         <div class="card-body">
                                             <h5 class="card-title mb-3">About</h5>
                                             <p>{{userData.Description}}</p>
@@ -317,7 +317,7 @@
                                                             <h6 class="text-truncate mb-0">{{userData.designation}}</h6>
                                                         </div>
                                                     </div>
-                                                </div><!--end col-->
+                                                </div>
                                                 <div class="col-6 col-md-4">
                                                     <div class="d-flex mt-4">
                                                         <div class="flex-shrink-0 avatar-xs align-self-center me-3">
@@ -332,16 +332,16 @@
                                                                 class="fw-semibold">{{userData.website}}</a>
                                                         </div>
                                                     </div>
-                                                </div><!--end col-->
-                                            </div><!--end row-->
-                                        </div><!--end card-body-->
-                                    </div><!-- end card -->
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div> -->
 
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <div class="card">
                                                 <div class="card-header align-items-center d-flex">
-                                                    <h4 class="card-title mb-0  me-2">Recent Activity</h4>
+                                                    <h4 class="card-title mb-0  me-2">Actividad reciente</h4>
                                                     <div class="flex-shrink-0 ms-auto">
                                                         <ul ngbNav #customNav="ngbNav" [activeId]="1"
                                                             class="nav justify-content-end nav-tabs-custom rounded card-header-tabs border-bottom-0"
@@ -349,7 +349,7 @@
                                                             <li [ngbNavItem]="1" class="nav-item">
                                                                 <a ngbNavLink class="nav-link" data-bs-toggle="tab"
                                                                     role="tab">
-                                                                    Today
+                                                                    Hoy
                                                                 </a>
                                                                 <ng-template ngbNavContent>
                                                                     <div class="profile-timeline order-status">
@@ -659,7 +659,7 @@
                                                             <li [ngbNavItem]="2" class="nav-item">
                                                                 <a ngbNavLink class="nav-link" data-bs-toggle="tab"
                                                                     role="tab">
-                                                                    Weekly
+                                                                    Semana
                                                                 </a>
                                                                 <ng-template ngbNavContent>
                                                                     <div class="profile-timeline order-status">
@@ -904,7 +904,7 @@
                                                             <li [ngbNavItem]="3" class="nav-item">
                                                                 <a ngbNavLink class="nav-link" data-bs-toggle="tab"
                                                                     role="tab">
-                                                                    Monthly
+                                                                    Mes
                                                                 </a>
                                                                 <ng-template ngbNavContent>
                                                                     <div class="profile-timeline order-status">
@@ -1582,12 +1582,12 @@
                     <li [ngbNavItem]="2" class="nav-item">
                         <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="ri-list-unordered d-inline-block d-md-none"></i> <span
-                                class="d-none d-md-inline-block">Activities</span>
+                                class="d-none d-md-inline-block">Actividades</span>
                         </a>
                         <ng-template ngbNavContent>
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title mb-3">Activities</h5>
+                                    <h5 class="card-title mb-3">Activididades</h5>
                                     <div class="acitivity-timeline">
                                         <div class="acitivity-item d-flex">
                                             <div class="flex-shrink-0">
@@ -1765,7 +1765,7 @@
                     <li [ngbNavItem]="3" class="nav-item">
                         <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="ri-price-tag-line d-inline-block d-md-none"></i> <span
-                                class="d-none d-md-inline-block">Projects</span>
+                                class="d-none d-md-inline-block">Proyectos</span>
                         </a>
                         <ng-template ngbNavContent>
                             <div class="card">
@@ -1842,7 +1842,7 @@
                     <li [ngbNavItem]="4" class="nav-item">
                         <a ngbNavLink class="nav-link" data-bs-toggle="tab" role="tab">
                             <i class="ri-folder-4-line d-inline-block d-md-none"></i> <span
-                                class="d-none d-md-inline-block">Documents</span>
+                                class="d-none d-md-inline-block">Documentos</span>
                         </a>
                         <ng-template ngbNavContent>
                             <div class="card">
@@ -1935,7 +1935,7 @@
                 </ul>
                 <div class="flex-shrink-0">
                     <a routerLink="/pages/profile-setting" class="btn btn-success"><i
-                            class="ri-edit-box-line align-bottom"></i> Edit Profile</a>
+                            class="ri-edit-box-line align-bottom"></i> Editar Perfil</a>
                 </div>
             </div>
             <!-- Tab panes -->
