--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -53,7 +53,7 @@
 
                                   <div class="mb-3">
                                       <div class="float-end">
-                                          <a routerLink="/pass-reset/basic" class="text-muted">Olvido su contraseña?</a>
+                                          <a routerLink="/auth/pass-reset" class="text-muted">Olvido su contraseña?</a>
                                       </div>
                                       <label class="form-label" for="password-input">Contraseña</label>
                                       <div class="position-relative auth-pass-inputgroup mb-3">
