--- a/src/app/account/auth/pass-reset/basic/basic.component.html
+++ b/src/app/account/auth/pass-reset/basic/basic.component.html
@@ -21,7 +21,7 @@
                               <img src="assets/images/logo-light2.png" alt="" height="20">
                           </a>
                       </div>
-                      <p class="mt-3 fs-15 fw-medium">Premium Admin & Dashboard Template</p>
+                      <p class="mt-3 fs-15 fw-medium">Cumplimiento legal de tu empresa a un click</p>
                   </div>
               </div>
           </div>
@@ -33,8 +33,8 @@
 
                       <div class="card-body p-4">
                           <div class="text-center mt-2">
-                              <h5 class="text-primary">Forgot Password?</h5>
-                              <p class="text-muted">Reset password with velzon</p>
+                              <h5 class="text-primary">Olvidaste tu contraseña?</h5>
+                              <p class="text-muted">Restaura tu clave con Conect-IA</p>
                               <lord-icon
                                     src="https://cdn.lordicon.com/rhvddzym.json"
                                     trigger="loop"
@@ -44,20 +44,21 @@
                           </div>
 
                           <div class="alert alert-borderless alert-warning text-center mb-2 mx-2" role="alert">
-                              Enter your email and instructions will be sent to you!
+                            Ingrese su correo electrónico y se le enviarán las instrucciones!
                           </div>
                           <div class="p-2">
                               <form [formGroup]="passresetForm" (ngSubmit)="onSubmit()">
                                   <div class="mb-4">
-                                      <label class="form-label">Email</label>
-                                      <input type="email" class="form-control" id="email" placeholder="Enter Email" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f['email'].errors }">
+                                      <label class="form-label">Correo Electrónico</label>
+                                      <input type="email" class="form-control" id="email" placeholder="Ingresar correo electrónico" formControlName="email" [ngClass]="{ 'is-invalid': submitted && f['email'].errors }">
                                       <div *ngIf="submitted && f['email'].errors" class="invalid-feedback" align="left">
-                                        <div *ngIf="f['email'].errors['required']">Email is required</div>
+                                        <div *ngIf="f['email'].errors['required']">Correo Electrónico es requerido</div>
                                       </div>
                                   </div>
 
                                   <div class="text-center mt-4">
-                                      <button class="btn btn-success w-100" type="submit">Send Reset Link</button>
+                                      <button class="btn btn-success w-100" type="submit">
+                                        Enviar enlace de reinicio</button>
                                   </div>
                               </form><!-- end form -->
                           </div>
@@ -67,7 +68,7 @@
                   <!-- end card -->
 
                   <div class="mt-4 text-center">
-                      <p class="mb-0">Wait, I remember my password... <a routerLink="/auth/signin/basic" class="fw-semibold text-primary text-decoration-underline"> Click here </a> </p>
+                      <p class="mb-0">Espera, recuerdo mi contraseña... <a routerLink="/auth/login" class="fw-semibold text-primary text-decoration-underline"> Click aqui </a> </p>
                   </div>
 
               </div>
@@ -84,7 +85,7 @@
           <div class="row">
               <div class="col-lg-12">
                   <div class="text-center">
-                      <p class="mb-0 text-muted">&copy; <script>document.write(new Date().getFullYear())</script> Velzon. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+                      <p class="mb-0 text-muted">&copy; <script>document.write(new Date().getFullYear())</script> Conect - IA. Crafted with <i class="mdi mdi-heart text-danger"></i> by Tresidea spa</p>
                   </div>
               </div>
           </div>
