--- a/src/app/pages/extrapages/profile/settings/settings.component.html
+++ b/src/app/pages/extrapages/profile/settings/settings.component.html
@@ -31,8 +31,8 @@
                             </label>
                         </div>
                     </div>
-                    <h5 class="fs-16 mb-1">Anna Adame</h5>
-                    <p class="text-muted mb-0">Lead Designer / Developer</p>
+                    <h5 class="fs-16 mb-1">{{userData.first_name}} {{userData.last_name}}</h5>
+                    <p class="text-muted mb-0">{{userData.role}}</p>
                 </div>
             </div>
         </div><!--end card-->
@@ -120,14 +120,14 @@
                                         <div class="mb-3">
                                             <label for="firstnameInput" class="form-label">Nombre</label>
                                             <input type="text" class="form-control" id="firstnameInput"
-                                                placeholder="Ingresa tu nombre" value="Dave">
+                                                placeholder="Ingresa tu nombre" value="{{userData.first_name}}">
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-6">
                                         <div class="mb-3">
                                             <label for="lastnameInput" class="form-label">Apellido</label>
                                             <input type="text" class="form-control" id="lastnameInput"
-                                                placeholder="Ingresa tu apellido" value="Adame">
+                                                placeholder="Ingresa tu apellido" value=" {{userData.last_name}}">
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-6">
@@ -141,7 +141,7 @@
                                         <div class="mb-3">
                                             <label for="emailInput" class="form-label">Correo Electrónico</label>
                                             <input type="email" class="form-control" id="emailInput"
-                                                placeholder="Ingresa tu correo Electrónico" value="daveadame@velzon.com">
+                                                placeholder="Ingresa tu correo Electrónico" value=" {{userData.email}}">
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-12">
