--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -45,7 +45,14 @@
                     | translate}}</span>
                 </a>
 
-                <a [routerLink]="item.link" *ngIf="!hasItems(item)" class="side-nav-link-ref nav-link menu-link" (click)="toggleParentItem($event)">
+                <a [routerLink]="item.link" *ngIf="!hasItems(item) && !item.onlyAdmin" class="side-nav-link-ref nav-link menu-link" (click)="toggleParentItem($event)">
+                  <i class="bx {{ item.icon }} icon nav-icon" *ngIf="item.icon" class=""></i>
+                  <span class=""> {{ item.label | translate }}</span>
+                  <span class="badge badge-pill {{item.badge.variant}}" *ngIf="item.badge">{{item.badge.text
+                    | translate}}</span>
+                </a>
+                
+                <a [routerLink]="item.link" *ngIf="!hasItems(item) && item.onlyAdmin && userData.role == 'admin'" class="side-nav-link-ref nav-link menu-link" (click)="toggleParentItem($event)">
                   <i class="bx {{ item.icon }} icon nav-icon" *ngIf="item.icon" class=""></i>
                   <span class=""> {{ item.label | translate }}</span>
                   <span class="badge badge-pill {{item.badge.variant}}" *ngIf="item.badge">{{item.badge.text
